--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
-    "test": "jest"    
+    "test": "jest"
   },
   "author": "Siddhant",
   "license": "ISC",
@@ -16,9 +16,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1"
   },
-  "browserslist" : [
+  "browserslist": [
     "last 5 versions"
   ]
 }
